@@ -2,18 +2,16 @@ package org.scoula.house.service;
 
 import lombok.RequiredArgsConstructor;
 import lombok.extern.log4j.Log4j2;
-import org.scoula.house.dto.HouseDTO;
+import org.scoula.house.domain.HouseCardVO;
+import org.scoula.house.dto.HousePage.*;
 import org.scoula.house.mapper.ApplyHomeOfficetelDetailMapper;
+import org.scoula.house.mapper.HouseFilterMapper;
 import org.scoula.house.mapper.LhHousingHouseMapper;
 import org.scoula.house.mapper.LhRentalHouseMapper;
 import org.springframework.stereotype.Service;
 
-import java.util.ArrayList;
-import java.util.Comparator;
-import java.util.Date;
 import java.util.List;
 import java.util.stream.Collectors;
-import java.util.stream.Stream;
 
 @Service
 @Log4j2
@@ -23,23 +21,24 @@ public class HouseServiceImp implements HouseService {
     private final LhRentalHouseMapper lhRentalHouseMapper;
     private final LhHousingHouseMapper lhHousingHouseMapper;
     private final ApplyHomeOfficetelDetailMapper applyHomeOfficetelDetailMapper;
+    private final HouseFilterMapper houseFilterMapper;
 
     @Override
-    public List<HouseDTO> getHouses() {
-        // 1. 데이터 조회 및 변환
-        List<HouseDTO> rentalHouses = lhRentalHouseMapper.getRecentHouses().stream()
-                .map(HouseDTO::ofLhRentalHouseVO)
-                .toList();
+    public HousePageResponseDTO getHouses(HouseSearchRequestDTO requestDto) {
+        // DTO에 값이 있으면 자동으로 필터링됨
+        List<HouseCardVO> voList = houseFilterMapper.getHousingList(requestDto);
+        int totalCount = houseFilterMapper.getHousingCount(requestDto);
 
-        List<HouseDTO> housingHouses = lhHousingHouseMapper.getRecentHouses().stream()
-                .map(HouseDTO::ofLhHousingHouseVO)
-                .toList();
+        List<HouseCardDTO> responseDtoList = voList.stream()
+                .map(HouseCardDTO::ofHouseCardVO)
+                .collect(Collectors.toList());
 
-        // 2. 합치고 최신순 정렬
-        return Stream.concat(rentalHouses.stream(), housingHouses.stream())
-                .sorted(Comparator.comparing(HouseDTO::getNoticeDate,
-                        Comparator.nullsLast(Comparator.reverseOrder())))
-                .toList();
+        PageInfoDTO pageInfo = PageInfoDTO.from(requestDto, totalCount);
+
+        return HousePageResponseDTO.builder()
+                .housingList(responseDtoList)
+                .pageInfo(pageInfo)
+                .build();
     }
 
     @Override
